# pinkhash

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
pinkhash/: __init__.py  alphabet.py  exception.py  lang.py  main.py
pinkhash/alphabets/: eng1.py  eng1_gen.py  nato.py  rfc1751.py
pinkhash/languages/: eng1.py  nato.py  rfc1751.py
pinkhash/languages/bip39/: __init__.py
pinkhash/languages/eng1/: __init__.py  eng1-adjective.txt  eng1-nouns.txt
